traces/bug_536.txt
src/Graphics/ffglut.cpp:575: error: DEAD_STORE
  The value written to &plot (type ThePlot&) is never used.
Showing all 1 steps of the trace


src/Graphics/ffglut.cpp:575:3: Write of unused value
573.   {
574.     initlist();
575.     ThePlot & plot=*win->theplot;
         ^
576.     win->SetScreenView() ;
577.     glColor3d(0.,0.,0.);
